k8s/platform/dev/services/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamecloud-rabbitmq
  labels:
    db: gamecloud-rabbitmq
data:
  rabbitmq.conf: |
    default_user = user
    default_pass = password
    vm_memory_high_watermark.relative = 0.95
spec:
  selector:
    matchLabels:
      db: gamecloud-rabbitmq
  template:
    metadata:
      labels:
        db: gamecloud-rabbitmq
    spec:
      containers:
        - name: gamecloud-rabbitmq
          image: rabbitmq:3.12-management
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi

---

apiVersion: v1
kind: Service
metadata:
  name: gamecloud-rabbitmq
  labels:
    db: gamecloud-rabbitmq
spec:
  type: ClusterIP
  selector:
    db: gamecloud-rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
